--- a/MioSito/MioSito.csproj
+++ b/MioSito/MioSito.csproj
@@ -16,6 +16,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Servicies\Infrastructure\" />
+  </ItemGroup>
+
 
 
 </Project>
